--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -15,20 +15,20 @@ body {
   grid-template-rows: auto auto auto;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
-  /*   padding-right: $padding-x;
-    padding-left: $padding-x; */
+  padding-right: 2.7em;
+  padding-left: 2.7em;
   padding-bottom: 1em;
   justify-content: center;
 }
 body .header {
   display: grid;
-  grid-template-columns: auto 24em;
+  grid-auto-flow: column;
   font-family: "Raleway", sans-serif;
   font-weight: 400;
-  width: 100%;
 }
 body .header .header__logo {
   margin-bottom: 0;
+  padding-top: 1em;
 }
 body .header .header__nav {
   display: grid;
@@ -48,7 +48,7 @@ body .main__section-1 > * {
     display: grid;
     grid-auto-flow: row;
     justify-content: center;
-    width: 70%;
+    align-content: center;
   }
   body .main__section-1 .section-1__image {
     order: -1;
