--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -35,22 +35,21 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
 
-/*   padding-right: $padding-x;
-  padding-left: $padding-x; */
+  padding-right: $padding-x;
+  padding-left: $padding-x;
   padding-bottom: 1em;
   justify-content: center;
 
   .header {
     display: grid;
-    grid-template-columns: auto 24em;
+    grid-auto-flow: column;
 
     font-family: "Raleway", sans-serif;
     font-weight: 400;
 
-    width: 100%;
-
     .header__logo {
       margin-bottom: 0;
+      padding-top: 1em;
     }
 
     .header__nav {
@@ -76,7 +75,7 @@ body {
       display: grid;
       grid-auto-flow: row;
       justify-content: center;
-      width: 70%;
+      align-content: center;
 
       .section-1__image {
         order: -1;
