--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -16,7 +16,6 @@ body {
   display: grid;
   grid-auto-flow: row;
   row-gap: 10em;
-  grid-template-rows: repeat(3, auto);
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   padding-right: 5vw;
@@ -26,14 +25,12 @@ body {
 }
 body .header {
   display: grid;
-  grid-template-columns: 10% -webkit-min-content;
-  grid-template-columns: 10% min-content;
+  grid-template-columns: repeat(2, -webkit-min-content);
+  grid-template-columns: repeat(2, min-content);
   font-family: "Raleway", sans-serif;
   font-weight: 400;
   justify-content: space-between;
-}
-body .header .header__logo {
-  margin-top: 1em;
+  padding-top: 1em;
 }
 body .header .header__nav {
   display: grid;
@@ -48,30 +45,35 @@ body .header .header__nav .header__tabs {
   color: inherit;
   white-space: nowrap;
 }
-body .main__section-1 > * {
+body .main {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 10em;
+}
+body .main .main__section-1 > * {
   margin: 0;
 }
 @media only screen and (max-width: 915px) {
-  body .main__section-1 {
+  body .main .main__section-1 {
     display: grid;
     grid-auto-flow: row;
     justify-content: center;
     align-content: center;
   }
-  body .main__section-1 .section-1__image {
+  body .main .main__section-1 .section-1__image {
     order: -1;
     max-width: 100%;
     max-height: 100%;
   }
-  body .main__section-1 .section-1__title {
+  body .main .main__section-1 .section-1__title {
     font-size: 2em;
     padding-bottom: 1em;
   }
-  body .main__section-1 .section-1__description {
+  body .main .main__section-1 .section-1__description {
     font-size: 1.375em;
     padding-bottom: 1em;
   }
-  body .main__section-1 .section-1__form {
+  body .main .main__section-1 .section-1__form {
     display: grid;
     grid-auto-flow: row;
     row-gap: 1.5em;
@@ -79,7 +81,7 @@ body .main__section-1 > * {
   }
 }
 @media only screen and (min-width: 916px) {
-  body .main__section-1 {
+  body .main .main__section-1 {
     max-height: 37.5975em;
     display: grid;
     grid-template-rows: auto repeat(3, -webkit-min-content) auto;
@@ -88,17 +90,17 @@ body .main__section-1 > * {
     justify-content: center;
     max-width: 100%;
   }
-  body .main__section-1 .section-1__title {
+  body .main .main__section-1 .section-1__title {
     grid-area: 2/1/3/2;
     font-size: 2em;
     padding-bottom: 1em;
   }
-  body .main__section-1 .section-1__description {
+  body .main .main__section-1 .section-1__description {
     grid-area: 3/1/4/2;
     font-size: 1.375em;
     padding-bottom: 1em;
   }
-  body .main__section-1 .section-1__form {
+  body .main .main__section-1 .section-1__form {
     grid-area: 4/1/5/2;
     display: grid;
     grid-auto-flow: column;
@@ -108,11 +110,30 @@ body .main__section-1 > * {
     padding-right: 1em;
     padding-left: 0.3em;
   }
-  body .main__section-1 .section-1__image {
+  body .main .main__section-1 .section-1__image {
     grid-area: 1/2/6/3;
     max-width: 100%;
     max-height: 100%;
   }
+}
+body .main .main__section-2 {
+  display: grid;
+  grid-template-areas: "title title image" "description decription image" "link link image" "card . image";
+}
+body .main .main__section-2 .section-2__title {
+  grid-area: title;
+}
+body .main .main__section-2 .section-2__description {
+  grid-area: description;
+}
+body .main .main__section-2 .section-2__link {
+  grid-area: link;
+}
+body .main .main__section-2 .card {
+  grid-area: card;
+}
+body .main .main__section-2 .section-2__image {
+  grid-area: image;
 }
 body input[type=button] {
   background-color: hsl(224deg, 93%, 58%);
