--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -33,7 +33,6 @@ body {
   display: grid;
   grid-auto-flow: row;
   row-gap: 10em;
-  grid-template-rows: repeat(3, auto);
 
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
@@ -45,16 +44,14 @@ body {
 
   .header {
     display: grid;
-    grid-template-columns: 10% min-content;
+    grid-template-columns: repeat(2, min-content);
 
     font-family: "Raleway", sans-serif;
     font-weight: 400;
 
     justify-content: space-between;
 
-    .header__logo {
-      margin-top: 1em;
-    }
+    padding-top: 1em;
 
     .header__nav {
       display: grid;
@@ -73,81 +70,111 @@ body {
     }
   }
 
-  .main__section-1 > * {
-    margin: 0;
-  }
+  .main {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 10em;
 
-  @media only screen and (max-width: 915px) {
-    .main__section-1 {
-      display: grid;
-      grid-auto-flow: row;
-      justify-content: center;
-      align-content: center;
+    .main__section-1 > * {
+      margin: 0;
+    }
 
-      .section-1__image {
-        order: -1;
-        max-width: 100%;
-        max-height: 100%;
-      }
-
-      .section-1__title {
-        @include font(math.div(32em, 16));
-        @include pb(1em);
-      }
-
-      .section-1__description {
-        @include font(math.div(22em, 16));
-        @include pb(1em);
-      }
-
-      .section-1__form {
+    @media only screen and (max-width: 915px) {
+      .main__section-1 {
         display: grid;
         grid-auto-flow: row;
-        row-gap: 1.5em;
-        height: 10em;
+        justify-content: center;
+        align-content: center;
+
+        .section-1__image {
+          order: -1;
+          max-width: 100%;
+          max-height: 100%;
+        }
+
+        .section-1__title {
+          @include font(math.div(32em, 16));
+          @include pb(1em);
+        }
+
+        .section-1__description {
+          @include font(math.div(22em, 16));
+          @include pb(1em);
+        }
+
+        .section-1__form {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 1.5em;
+          height: 10em;
+        }
       }
     }
-  }
 
-  @media only screen and (min-width: 916px) {
-    .main__section-1 {
-      $max-h: math.div(601.56em, 16);
-      max-height: $max-h;
-
-      display: grid;
-      grid-template-rows: auto repeat(3, min-content) auto;
-      grid-template-columns: 40% auto;
-      justify-content: center;
-      max-width: 100%;
-
-      .section-1__title {
-        grid-area: 2/1 / 3/2;
-        @include font(math.div(32em, 16));
-        @include pb(1em);
-      }
-
-      .section-1__description {
-        grid-area: 3/1 / 4/2;
-        @include font(math.div(22em, 16));
-        @include pb(1em);
-      }
-
-      .section-1__form {
-        grid-area: 4/1 / 5/2;
+    @media only screen and (min-width: 916px) {
+      .main__section-1 {
+        max-height: math.div(601.56em, 16);
 
         display: grid;
-        grid-auto-flow: column;
-        column-gap: 1em;
-        height: 2.8em;
-
-        padding-right: 1em;
-        padding-left: 0.3em;
-      }
-
-      .section-1__image {
-        grid-area: 1/2 / 6/3;
+        grid-template-rows: auto repeat(3, min-content) auto;
+        grid-template-columns: 40% auto;
+        justify-content: center;
         max-width: 100%;
-        max-height: 100%;
+
+        .section-1__title {
+          grid-area: 2/1 / 3/2;
+          @include font(math.div(32em, 16));
+          @include pb(1em);
+        }
+
+        .section-1__description {
+          grid-area: 3/1 / 4/2;
+          @include font(math.div(22em, 16));
+          @include pb(1em);
+        }
+
+        .section-1__form {
+          grid-area: 4/1 / 5/2;
+
+          display: grid;
+          grid-auto-flow: column;
+          column-gap: 1em;
+          height: 2.8em;
+
+          padding-right: 1em;
+          padding-left: 0.3em;
+        }
+
+        .section-1__image {
+          grid-area: 1/2 / 6/3;
+          max-width: 100%;
+          max-height: 100%;
+        }
+      }
+    }
+
+    .main__section-2 {
+      display: grid;
+      grid-template-areas:
+        "title title image"
+        "description description image"
+        "link link image"
+        "card . image";
+
+      .section-2__title {
+        grid-area: title;
+      }
+      .section-2__description {
+        grid-area: description;
+      }
+      .section-2__link {
+        grid-area: link;
+      }
+      .card {
+        grid-area: card;
+      }
+      .section-2__image {
+        grid-area: image;
       }
     }
   }
