--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -145,11 +145,13 @@ body input[type=button] {
   color: white;
 }
 body .div {
-  width: 80%;
+  width: 60%;
+  height: 1000px;
 }
 body .div .img {
   outline: 1px solid red;
-  width: 90%;
+  width: 100%;
+  height: 100%;
 }
 
 /*  .ob {
