--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -190,11 +190,13 @@ body {
   }
 
   .div {
-    width: 80%;
+    width: 60%;
+    height: 1000px;
 
     .img {
       outline: 1px solid red;
-      width: 90%;
+      width: 100%;
+      height: 100%;
     }
   }
 }
