--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -118,9 +118,9 @@ body .main .main__section-1 > * {
 }
 body .main .main__section-2 {
   display: grid;
-  grid-template-areas: "t t t t i i i i" "d d d . i i i i" "l . . . i i i i" "c c . . i i i i";
+  grid-template-areas: "t t t t t . i i" "d d d . . . i i" "l . . . . . i i" "c c . . . . i i";
   grid-template-rows: repeat(4, auto);
-  grid-template-columns: repeat(8, auto);
+  grid-template-columns: repeat(6, auto) repeat(2, 25%);
 }
 body .main .main__section-2 .section-2__title {
   grid-area: t;
